# compiler-experiment

./: .gitignore  Cargo.toml  test.py
src/: bytecode.rs  compiler.rs  config.rs  interpreter.rs  main.rs  parser.rs
src/bytecode/: runtime.rs
src/compiler/: annotate.rs  codegen.rs  display.rs
test/: run_tests.sh  test_defer.ss  test_exec_order.ss  test_fold.ss  test_if.ss  test_list.ss  test_pattern.ss  test_recursion.ss  test_returncall.ss  test_seq.ss  test_strict_defer.ss  test_syscall.ss
