#cargo-features = ["strip"]

[package]
name = "lisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
unescape = "0.1"
num-derive = "0.2"
num-traits = "0.2"
#smartstring = { version = "*", features = ["proptest", "serde"] }

#[profile.release]
#strip = "symbols"
